--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-command = "npm run build && npm run adapt"
+command = "npm run build && npm run adapt && cp -r content functions/render"
 publish = "build/"
 functions = "functions/"
