--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"marked": "^1.2.8",
 		"postcss": "^8.2.4",
 		"postcss-cli": "^8.3.1",
+		"postcss-nested": "^5.0.3",
 		"prettier": "^2.2.1",
 		"prettier-plugin-svelte": "^2.1.1",
 		"svelte": "^3.29.0",
