:wrench: Disable TypeScript ESLint rules for Svelte files
Also run ESLint on root

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"build": "svelte-kit build",
 		"adapt": "svelte-kit adapt",
 		"start": "svelte-kit start",
-		"lint": "eslint src"
+		"lint": "eslint ."
 	},
 	"devDependencies": {
 		"@snowpack/plugin-build-script": "^2.1.0",
