:wrench: Use path aliases for server-side code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,11 @@
 		"forceConsistentCasingInFileNames": true,
 		"baseUrl": ".",
 		"paths": {
-			"$components/*": ["./src/components/*"]
+			"$components/*": ["./src/components/*"],
+			"$assets/*": ["./src/assets/*"],
+			"$data/*": ["./src/data/*"],
+			"$models/*": ["./src/models/*"],
+			"$utils/*": ["./src/utils/*"]
 		}
 	},
 	"include": ["src/**/*"],
