--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
 		"start": "svelte-kit start"
 	},
 	"devDependencies": {
+		"@snowpack/plugin-build-script": "^2.1.0",
+		"@snowpack/plugin-postcss": "^1.1.0",
+		"@snowpack/plugin-typescript": "^1.0.0",
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
 		"@sveltejs/snowpack-config": "next",
+		"autoprefixer": "^10.2.3",
+		"postcss": "^8.2.4",
+		"postcss-cli": "^8.3.1",
 		"svelte": "^3.29.0",
-		"typescript": "^4.0.0",
-		"tslib": "^2.0.0",
 		"svelte-preprocess": "^4.0.0",
-		"@snowpack/plugin-typescript": "^1.0.0"
+		"tailwindcss": "^2.0.2",
+		"tslib": "^2.0.0",
+		"typescript": "^4.0.0"
 	}
 }
