--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"autoprefixer": "^10.2.3",
 		"eslint": "^7.18.0",
 		"eslint-plugin-svelte3": "^3.0.0",
+		"marked": "^1.2.8",
 		"postcss": "^8.2.4",
 		"postcss-cli": "^8.3.1",
 		"prettier": "^2.2.1",
@@ -29,5 +30,6 @@
 		"tailwindcss": "^2.0.2",
 		"tslib": "^2.0.0",
 		"typescript": "^4.0.0"
-	}
+	},
+	"dependencies": {}
 }
