--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
 		"@sveltejs/adapter-netlify": "next",
 		"@sveltejs/kit": "next",
 		"@sveltejs/snowpack-config": "next",
+		"@types/marked": "^1.2.2",
 		"@typescript-eslint/eslint-plugin": "^4.14.1",
 		"@typescript-eslint/parser": "^4.14.1",
 		"autoprefixer": "^10.2.3",
 		"eslint": "^7.18.0",
 		"eslint-plugin-svelte3": "^3.0.0",
+		"highlight.js": "^10.5.0",
 		"marked": "^1.2.8",
 		"postcss": "^8.2.4",
 		"postcss-cli": "^8.3.1",
