--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"autoprefixer": "^10.2.3",
 		"eslint": "^7.18.0",
 		"eslint-plugin-svelte3": "^3.0.0",
+		"front-matter": "^4.0.2",
 		"highlight.js": "^10.5.0",
 		"marked": "^1.2.8",
 		"postcss": "^8.2.4",
